--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,15 @@
 cmake_minimum_required(VERSION 3.28)
-project(opengl_project)
+project(opengl_cmake)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(opengl_project main.cpp)
+include_directories(include)
+
+add_subdirectory(external/glfw)
+include_directories(external/glfw/include)
+
+add_library(glad external/glad/src/glad.c)
+include_directories(external/glad/include)
+
+add_subdirectory(app)
+add_subdirectory(src)
